# virtual_remote

./: .gitattributes  .gitignore  README.md  pyproject.toml  run_mobile_typer.py
.github/workflows/: build-windows-exe.yml
docs/: win7_build.md  win7_install.md  win7_vm.md
icons/: A_down  A_top  B_top  C_down  C_top  D_top  E_top  F_down  F_top  G_top  H_down  H_top  I_top  J_top  K_top  L_top  M_top  N_top  O_top  P_top  Q_down  Q_top  R_top  test
packaging/: mobile_typer.spec  mobile_typer_win7.nsi  windows-build-requirements.txt  windows_version_info.txt
scripts/: build_windows.bat  build_windows.ps1  create_win7_vm.sh  install_mobile_typer.bat  install_mobile_typer.ps1  run_win7_vm.sh
src/mobile_typer/: app.py  constants.py  key_sender.py  network.py  server.py  ui.py
tests/: test_app.py
